--- a/springMyBatisProject/src/main/resources/application.properties
+++ b/springMyBatisProject/src/main/resources/application.properties
@@ -20,9 +20,10 @@ spring.datasource.url= jdbc:oracle:thin:@127.0.0.1:1521:XE
 spring.datasource.username=hr
 spring.datasource.password=hr
 
-#MyBatis 환경설정파일
-#mybatis.config-location=classpath:mybatis-config.xml
-#mybatis.mapper-locations=classpath:mappers/**/*.xml
+##MyBatis 환경설정파일
+## classpath : src/main/resources
+mybatis.config-location=classpath:mybatis-config.xml
+mybatis.mapper-locations=classpath:mappers/**/*.xml
 
 
 
