--- a/springMyBatisProject/src/main/resources/application.properties
+++ b/springMyBatisProject/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.messages.basename=message.message
 
 ##데이터베이스 환경설정
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url= jdbc:oracle:thin:@127.0.0.1:1521:XE
+spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/xepdb1
 spring.datasource.username=hr
 spring.datasource.password=hr
 
